[package]
name = "llm-cli-llama"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm-llama"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
dirs = "5"
hf-hub = "0.3"
llama-cpp-2 = "0.1"
rustyline = "14"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
tempfile = "3"
